--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -168,6 +168,17 @@ canvas {
 .container {
   margin-top: 40px;
   margin-bottom: 50px;
+  display: flex;
+  flex-wrap: wrap;
+
+}
+.product-column {
+  max-width: 250px; /* Establece un ancho máximo para las columnas */
+}
+
+.rowcard {
+  display: flex;
+  flex-wrap: wrap;
 }
 .btn-lineup {
   background-color: #f57c00;
